--- a/footer.css
+++ b/footer.css
@@ -27,6 +27,21 @@ footer {
   font-weight: bold;
   transform: scale(0.8);
 }
+@keyframes icons-둥둥 {
+  0% {
+    transform: translateY(0px);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
 .footer-icons__img {
   width: 30px;
+}
+
+.footer-icons__img :hover {
+  animation: 1s icons-둥둥 infinite;
 }
