--- a/main.css
+++ b/main.css
@@ -43,4 +43,9 @@ main {
   bottom: 120px;
   right: 20px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+.write-btn:hover {
+  background-color: #fb9c5d;
 }
