feat: 글쓰기 페이지의 기능 구현
-프론트엔드 글쓰기 페이지를 form으로 작업했습니다.
-백엔드와 SQlite를 연동해서 이미지와 데이터를 업로드하는 기능을 구현했습니다!

--- a/frontend/main.css
+++ b/frontend/main.css
@@ -1,5 +1,5 @@
 main {
-  padding: 30px 20px 30px 20px;
+  padding: 30px 20px 103px 20px;
 }
 .item-list {
   display: flex;
@@ -45,6 +45,7 @@ main {
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
+  text-decoration: none;
 }
 .write-btn:hover {
   background-color: #fb9c5d;
